--- a/package.json
+++ b/package.json
@@ -144,5 +144,5 @@
       "react-app"
     ]
   },
-  "homepage": "https://dbstpwlswork32.github.io/build"
+  "homepage": "https://dbstpwlswork32.github.io/build/"
 }
